# doc/swagger.json
@@ -356,9 +356,80 @@
         }
   }
 },
-
-              
-              "/contact/add":{
+       
+    "/product/addProduct": {
+      "post": {
+        "tags": [
+          "Products"
+        ],
+        "summary": "Add a new product",
+        "description": "add a new product with  the provided details",
+        "parameters": [
+          {
+            "name": "category",
+            "in": "formData",
+            "required": true,
+            "type":"string"
+            
+          },
+          {
+            "name": "name",
+            "in": "formData",
+            "required": true,
+            "type":"string"
+            
+          },
+          {
+            "name": "image",
+            "in": "formData",
+            "required": true,
+            "type":"file"
+           
+          },
+          {
+            "name": "description",
+            "in": "formData",
+            "required": true,
+            "type":"string"
+           
+          },
+          {
+            "name": "rating",
+            "in": "formData",
+            "required": true,
+            "type":"number"
+           
+          },
+          {
+            "name": "colors",
+            "in": "formData",
+            "required": true,
+            "type":"string"
+           
+          },
+          {
+            "name": "price",
+            "in": "formData",
+            "required": true,
+            "type":"number"
+           
+          }
+          
+        ],
+       
+        "responses": {
+          "200": {
+            "description": "Service added successfully"
+           
+          },
+          "401": {
+            "description": "Bad request -Validation error"
+            
+          }
+        }
+      }
+    },       
+             "/contact/add":{
                 "post":{
                   "tags":["Contact Us"],
                   "summary":"Add a contact",
@@ -692,20 +763,7 @@
         },
         "required":["email","contact","message"]
       },
-      "Services":{
-        "type":"object",
-        "properties":{
-          "category":{},
-          "serviceName":{},
-          "image":{},
-          "description":{},
-          "location":{},
-          "email":{},
-          "phoneNumber":{},
-          "price":{},
-          "availability":{}
-        }
-      },
+      
         "Bookings": {
           "type": "object",
           "properties": {
